<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="323dp"
        tools:layout_editor_absoluteY="43dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="35dp">

            <Button
                android:id="@+id/sleep_form_back_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/sleep_form_back_btn"
                android:textColor="@android:color/background_light" />


            <EditText
                android:id="@+id/sleep_form_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/sleep_form_weighing_date" />
            <EditText
                android:id="@+id/sleep_form_start_sleep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/sleep_form_start_sleep"/>

            <EditText
                android:id="@+id/sleep_form_end_sleep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:hint="@string/sleep_form_end_sleep"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sleep_form_save_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:text="@string/sleep_form_save_btn"
                android:textColor="@android:color/background_light" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
