<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="35dp">

            <Button
                android:id="@+id/bmi_back_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/bmi_back_btn"/>


            <EditText
                android:id="@+id/bmi_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bmi_height"
                android:inputType="number"

                />
            <EditText
                android:id="@+id/bmi_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bmi_width"
                android:inputType="number"/>

            <Button
                android:id="@+id/bmi_calculate_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"

                android:text="@string/bmi_button_calculate"/>
            <TextView
                android:id="@+id/bmi_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:textSize="40dp"
                android:textAlignment="center"
                android:text=""/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>