<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="35dp">

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="99dp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"

                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="281dp" />

            <EditText
                android:id="@+id/register_re_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"

                android:ems="10"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="281dp" />

            <Button
                android:id="@+id/register_register_btn"
                android:layout_width="368dp"
                android:layout_height="67dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/background_light"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="243dp" />

            <Button
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/background_light"
                android:id="@+id/register_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="back" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>